[package]
name = "yeeboy"
version = "0.1.0"
authors = ["Xavier Perez <duosrx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"

[dependencies.sdl2]
version = "*"
features = ["unsafe_textures"]

[profile.release]
debug = true
